go/go-nuxt/webapp.yml
apiVersion: v1
kind: Service
metadata:
  name: webappapi
  labels:
    run: webappapi
spec:
  selector:
    run: webappapi
  ports:
  - name: http
    port: 8000
  type: NodePort

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webappapi
  labels:
    run: webappapi
spec:
  replicas: 3
  template:
    metadata:
      labels:
        run: webappapi
    spec:
      containers:
      - name: webappapi
        image: gcr.io/docker-kubernetes-250116/apiprod:1.0.0
        ports:
        - containerPort: 8000
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 1.1.1.1
